--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -30,3 +30,18 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.section-subtitle {
+    font-size: 12px;
+    color: #2AA7FF;
+    font-weight: bold;
+    margin: 4px;
+}
+
+.section-heading {
+    color:#1B3C74;
+    font-size: 30px;
+    font-weight:600;
+    margin: 6px;
+}
+
