--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -2,5 +2,6 @@
   text-align: center;
   /* background-image: linear-gradient(to right, #E7F0FF, #E8F1FF); */
   background: linear-gradient(81deg, #E7F0FF 9.01%, rgba(232, 241, 255, 0.47) 89.11%);
+  color: #1B3C74;
 }
 
